[gd_scene load_steps=4 format=3 uid="uid://c7s6wnh86xbo6"]

[ext_resource type="Script" path="res://src/hud.gd" id="1_juxqn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ch7jn"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.156863, 0.156863, 0.156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnmav"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="HudLayer" type="CanvasLayer"]

[node name="Hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_juxqn")

[node name="PanelContainer" type="PanelContainer" parent="Hud"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 111.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ch7jn")

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/PanelContainer"]
layout_mode = 2

[node name="Health" type="Label" parent="Hud/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "HP : 10 / 10"

[node name="Key" type="Label" parent="Hud/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Ключи : 0"

[node name="PanelContainer2" type="PanelContainer" parent="Hud"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -73.0
offset_right = 46.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_nnmav")

[node name="Hint" type="Label" parent="Hud/PanelContainer2"]
layout_mode = 2
text = "Hint label"

[node name="HintTimer" type="Timer" parent="Hud/PanelContainer2"]

[connection signal="timeout" from="Hud/PanelContainer2/HintTimer" to="Hud" method="_on_hint_timer_timeout"]
